fixes spacing on articles

--- a/_assets/scss/layouts/_articles.scss
+++ b/_assets/scss/layouts/_articles.scss
@@ -94,6 +94,12 @@
   }
 }
 
+.article-title {
+  @include breakpoint($med) {
+    padding-right: $unit-2;
+  }
+}
+
 .article-images {
   margin-bottom: $unit-2;
 
